# neurovault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DUAL_BRAIN_PLAN.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ANNOUNCEMENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CIRCUIT_CATALOG.md  CIRCUIT_GUIDE.md  INSTALL.md  MCP_INTEGRATION.md  POWER_PLAN.md  TROUBLESHOOTING.md
mcp-server/: package.json
mcp-server/src/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: anticipatory.rs  attention.rs  audio.rs  autonomy.rs  brain_core.rs  capability_frontier.rs  circuit_performance.rs  circuits.rs  cognitive_fingerprint.rs  cold_storage.rs  cold_storage_parquet.rs  config.rs  context_bundle.rs  context_quality.rs  curiosity_v2.rs  data_streams.rs  decision_simulator.rs  distributed.rs  dream_mode.rs  economics.rs  edge_cache.rs  error.rs  events.rs  federation.rs  finetune.rs  http_api.rs  internal_dialogue.rs  knowledge_compiler.rs  lib.rs  main.rs  master_loop.rs  memory_tier.rs  power_policy.rs  power_telemetry.rs  self_model.rs  session_continuity.rs  sidekick.rs  sidekick_suggestions.rs  system_health.rs  temporal.rs  (+3 more)
src-tauri/src/ai/: client.rs  mod.rs  summarize.rs  synthesis.rs  synthesize.rs
src-tauri/src/analysis/: mod.rs  patterns.rs  recommendations.rs  trends.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: activity.rs  ai.rs  analysis.rs  autonomy.rs  backup.rs  brains.rs  compact.rs  consciousness.rs  economics.rs  embeddings.rs  federation.rs  graph.rs  infrastructure.rs  ingest.rs  learning.rs  mcp.rs  mod.rs  models.rs  quality.rs  repair.rs  search.rs  self_improve.rs  sensory.rs  settings.rs  stats.rs  swarm.rs  user.rs  world.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/embeddings/: hnsw.rs  mod.rs  pipeline.rs  similarity.rs  vector_backend.rs
src-tauri/src/export/: mod.rs  training.rs
src-tauri/src/ingestion/: code.rs  mod.rs  project.rs
src-tauri/src/ingestion/sources/: mod.rs
src-tauri/src/learning/: curiosity.rs  gaps.rs  missions.rs  mod.rs
src-tauri/src/mcp/: client.rs  mod.rs
src-tauri/src/quality/: archive.rs  decay.rs  dedup.rs  mod.rs  scoring.rs
src-tauri/src/swarm/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/user/: mod.rs  profile.rs  tracker.rs
src/components/brain/: BrainContainment.ts  BrainMesh.tsx  BrainScene.tsx  CoreNode.tsx  DomainLabels.tsx  EnvironmentSetup.tsx  NeuralEffects.tsx  NeuronCloud.tsx  NeuronInstances.tsx  PostProcessing.tsx  SynapseLines.tsx
src/components/hud/: BrainPicker.tsx  SearchBar.tsx  StatusBar.tsx  ViewModeSelector.tsx
src/components/layout/: Sidebar.tsx
src/components/panels/: AskBrainPanel.tsx  AutonomyPanel.tsx  BackupPanel.tsx  BrainActivityPanel.tsx  ConsciousnessPanel.tsx  DigitalTwinPanel.tsx  IngestionPanel.tsx  InsightsPanel.tsx  KeyboardShortcutHelp.tsx  LearningPanel.tsx  NodeDetail.tsx  OnboardingWizard.tsx  QualityPanel.tsx  ResearchPanel.tsx  SearchPanel.tsx  SelfImprovePanel.tsx  SettingsPanel.tsx  StatsPanel.tsx  SwarmPanel.tsx  WorldModelPanel.tsx
src/components/sidekick/: ActivityFeed.tsx  ContextPanel.tsx  SuggestionToast.tsx
src/hooks/: useBrainContainment.ts  useBrainData.ts  useBrainStats.ts  useKeyboardShortcuts.ts  useSearch.ts  useSidekickEvents.ts
src/lib/: constants.ts  tauri.ts  utils.ts
src/stores/: graphStore.ts  sidekickStore.ts  uiStore.ts
src/styles/: globals.css
